--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     image: redis:alpine
     ports:
       - "6379:6379"
+    networks:
+      - app-network
 
   app:
     build:
       context: .
-    ports:
-      - "8080:8080"
+    deploy:
+      replicas: 3
     environment:
       - REDIS_ADDR=redis:6379
       - PORT=:8080
@@ -17,3 +19,20 @@ services:
       - MODE=redis
     depends_on:
       - redis
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
