add prometheus yml, added metrics endpoint to nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,4 +9,7 @@ server {
         proxy_pass http://app;
         proxy_set_header X-Real-IP $remote_addr;
     }
+    location /metrics {
+        proxy_pass http://app;
+    }
 }
